--- a/src/RookieShop.IdentityService/Pages/Account/Login/Index.cshtml
+++ b/src/RookieShop.IdentityService/Pages/Account/Login/Index.cshtml
@@ -46,6 +46,7 @@
 
                             <button class="btn btn-primary" name="Input.Button" value="login">Login</button>
                             <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
+                            <button class="btn btn-secondary" name="Input.Button" value="register">Register</button>
                         </form>
                     </div>
                 </div>
