--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -3,33 +3,67 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - Storefront</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/output.css" asp-append-version="true"/>
 </head>
-<body>
-<header>
-    <div class="">
-        <h1 class="leading-relaxed font-primary font-extrabold text-4xl text-center text-palette-primary mt-4 py-2 sm:py-4">
-            Storefront
-        </h1>
-        <p class="max-w-xl text-center px-2 mx-auto text-base text-gray-600">
-            Times are tough. Liven up your home with some cute Doggy Stickers. 🐶
-        </p>
-    </div>
+<body class="flex flex-col min-h-screen pt-24">
+<header class="shadow-sm">
+    <nav class="bg-white fixed w-full z-20 top-0 start-0 border-b border-gray-200">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a asp-page="" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img loading="lazy" src="/imgs/logo.png" class="h-8" alt="Rookie Shop">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
+            </a>
+            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</button>
+                <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                    </svg>
+                </button>
+            </div>
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+                <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
+                    <li>
+                        <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Products</a>
+                    </li>
+                    <li>
+                        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
-<div class="container">
+
+<div class="flex-1">
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2024 - RookieShop.Storefront - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<footer class="bg-white shadow border-t border-gray-200 shadow-sm">
+    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <a asp-page="" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+                <img loading="lazy" src="/imgs/logo.png" class="h-8" alt="Rookie Shop"/>
+                <span class="self-center text-2xl font-semibold whitespace-nowrap">Rookie Shop</span>
+            </a>
+        </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8"/>
+        <span class="block text-sm text-gray-500 sm:text-center">
+            © @DateTime.UtcNow.Year <a href="https://github.com/foxminchan" class="hover:underline">FoxMinChan</a>. All Rights Reserved.
+        </span>
     </div>
 </footer>
+
 <script src="~/lib/dist/jquery/dist/jquery.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
