feat(report): add best seller

--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
 </header>
 
 <div class="flex-1">
+    <partial name="_CookieConsentPartial"/>
     <main role="main">
         @RenderBody()
     </main>
