fix: azurite header issue

--- a/src/RookieShop.ApiService/Templates/Order.cshtml
+++ b/src/RookieShop.ApiService/Templates/Order.cshtml
@@ -45,7 +45,7 @@
             <tr>
                 <td colspan="2" style="font-size:14px; padding:50px 15px 0 15px;">
                     <strong style="display:block; margin:0 0 10px 0;">Best regards,</strong>
-                    <a href="https://www.nashtechglobal.com/" target="_blank">Rookie Shop</a><br />
+                    <a href="https://www.nashtechglobal.com/" target="_blank" rel="noopener">Rookie Shop</a><br />
                     E-town 1, Level 3, 364 Cong Hoa Street, Tan Binh District, Ho Chi Minh City<br />
                     <br />
                     <b>Phone: </b><a href="tel:02838106200" target="_blank">028-3810-6200</a><br />
