--- a/ui/storefront/Views/Shared/Components/Home/Hero.cshtml
+++ b/ui/storefront/Views/Shared/Components/Home/Hero.cshtml
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700">Shop Now</a>
+                    <a asp-controller="Product" class="inline-block rounded-md border border-transparent bg-indigo-600 px-8 py-3 text-center font-medium text-white hover:bg-indigo-700">Shop Now</a>
                 </div>
             </div>
         </div>
