--- a/ui/storefront/Views/Shared/Components/Product/Pagination.cshtml
+++ b/ui/storefront/Views/Shared/Components/Product/Pagination.cshtml
@@ -8,14 +8,14 @@
         </svg>
         Previous
     </button>
-    @for (var page = 0; page < Model.TotalPages; page++)
+    @for (var pageNumber = 1; pageNumber <= Model.TotalPages; pageNumber++)
     {
-        if (page == Model.PageNumber)
+        if (pageNumber == Model.PageNumber)
         {
             <button class="relative h-10 max-h-[40px] w-10 max-w-[40px] select-none rounded-full bg-gray-900 text-center align-middle font-sans text-xs font-medium uppercase text-white shadow-md shadow-gray-900/10 transition-all hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                     type="button">
                 <span class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-                    @page
+                    @pageNumber
                 </span>
             </button>
         }
@@ -24,7 +24,7 @@
             <button class="relative h-10 max-h-[40px] w-10 max-w-[40px] select-none rounded-full text-center align-middle font-sans text-xs font-medium uppercase text-gray-900 transition-all hover:bg-gray-900/10 active:bg-gray-900/20 disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none"
                     type="button">
                 <span class="absolute transform -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
-                    @page
+                    @pageNumber
                 </span>
             </button>
         }
