--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -17,18 +17,30 @@
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 @if (User.Identity!.IsAuthenticated)
                 {
-                    <ul class="list-none flex space-x-6">
+                    <ul class="list-none flex space-x-4 items-center">
                         <li>
-                            <button type="button" class="text-white bg-teal-700 hover:bg-teal-800 focus:ring-4 focus:outline-none focus:ring-teal-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Your Cart</button>
+                            <a>
+                                <img loading="lazy" src="/imgs/home/account.svg" class="h-6 w-6" alt="Account"/>
+                            </a>
                         </li>
                         <li>
-                            <button type="button" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</button>
+                            <a class="flex items-center space-x-2 justify-center py-4 pr-2">
+                                <div class="relative">
+                                    <div class="t-0 absolute left-4">
+                                        <p class="flex h-2 w-2 items-center justify-center rounded-full bg-red-500 p-2 text-xs text-white">3</p>
+                                    </div>
+                                    <img loading="lazy" class="mt-2 h-6 w-6" src="imgs/home/cart.svg" alt="Cart"/>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a asp-controller="Account" asp-action="Logout" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
                         </li>
                     </ul>
                 }
                 else
                 {
-                    <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</button>
+                    <a asp-controller="Account" asp-action="Login" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Sign in</a>
                 }
                 <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-sticky" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
