--- a/ui/storefront/Views/Shared/Components/Product/ProductItems.cshtml
+++ b/ui/storefront/Views/Shared/Components/Product/ProductItems.cshtml
@@ -6,7 +6,7 @@
 {
     <div class="group relative">
         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-            <img loading="lazy" src="@product.ImageUrl" alt="@product.Name" class="h-full w-full lg:h-full lg:w-full">
+            <img loading="lazy" src="@(product.ImageUrl ?? "/imgs/product/default-preview-image.png")" alt="@product.Name" class="h-full w-full lg:h-full lg:w-full">
         </div>
         <div class="mt-4 flex justify-between">
             <div>
