refactor: relocate service

--- a/src/RookieShop.IdentityService/Pages/Index.cshtml
+++ b/src/RookieShop.IdentityService/Pages/Index.cshtml
@@ -33,7 +33,7 @@
         </li>
     </ul>
 
-    @if (Model.License != null)
+    @if (Model.License is not null)
     {
         <h2>License</h2>
         <dl>
